--- a/src/app/rfps/rfp/rfp.component.html
+++ b/src/app/rfps/rfp/rfp.component.html
@@ -1,4 +1,4 @@
-<div class="main-panel" [ngClass]="status ? 'sidebarActive' : ''">
+<div class="main-panel rfp-component" [ngClass]="status ? 'sidebarActive' : ''">
   <!-- <div class="navbar-minimize sidebarToggle" (click)="navbarClass()">
     <button class="btn btn-round btn-white btn-fill btn-just-icon" id="minimizeSidebar">
       <i class="material-icons visible-on-sidebar-regular">more_vert</i>
