--- a/src/app/rfps/state-rfp/state-rfp.component.html
+++ b/src/app/rfps/state-rfp/state-rfp.component.html
@@ -1,7 +1,7 @@
 <!-- <app-header class="inner"></app-header> -->
 <app-loader></app-loader>
 
-<div class="main-panel" [ngClass]="status ? 'sidebarActive' : ''">
+<div class="main-panel agency-rfp" [ngClass]="status ? 'sidebarActive' : ''">
         <!-- <div class="navbar-minimize sidebarToggle">
             <button class="btn btn-round btn-white btn-fill btn-just-icon" id="minimizeSidebar">
                 <i class="material-icons visible-on-sidebar-regular">more_vert</i>
