--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<div class="sidebar-holder" id="side">
+<div class="sidebar-holder side-bar-component" id="side">
     <div class="sidebar-admin">
         <div class="user-sidebar">
 
