--- a/src/app/advance-search/advance-search.component.html
+++ b/src/app/advance-search/advance-search.component.html
@@ -85,7 +85,7 @@
         <div *ngIf="record.length >= 1 " class="card-content">
             <div class="row">
                 <div class="col-md-12">
-                    <h3 class="search-results">Search Results - {{length | number}} RFP Opportunities Found</h3>
+                    <h3 class="text-center srch-result">Search Results - {{length | number}} RFP Opportunities Found</h3>
                 </div>
                 <div class="col-md-6" style="padding: 0;">
                 </div>
