--- a/src/app/rfp-as-service/rfp-as-service.component.html
+++ b/src/app/rfp-as-service/rfp-as-service.component.html
@@ -1,6 +1,6 @@
 <!-- <app-header></app-header> -->
 <app-loader></app-loader>
-<section class="about-1">
+<section class="about-1 rfp-as-service">
   <div class="container">
     <div class="main-text">
         <!-- <p class="large"><strong>About RFPGurus.com</strong></p> -->
@@ -55,7 +55,7 @@
       <p>
           RFP response is a team effort that requires non-stop  communication and coordination between your organization, and client.  Team work and system collaboration ensures success.We are struggling to  to establish two-way visibility for boosting High Return on Investment (ROI) .We eradicate tiresome and lengthy processes and maximize the value of every single  dollar you spend. When there’s competition, you always win. Don’t restrict the reach of your solicitations or make it hard for suppliers to submit responses. 
       </p> 
-      <h2 style="color:red"> The Tools to Win Government Business</h2>   
+      <h2 class="clr_red"> The Tools to Win Government Business</h2>   
       <p> 
       <b>    From locating opportunities to writing winning proposals, we have the excellent tools and resources that will make your business successful in the public-sector. 
       </b>
