--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1188,10 +1188,7 @@
     margin: 10px 0!important
 }
 
-body {
-    background-color: #fafafa;
-    overflow-x: hidden
-}
+
 
 .card [data-background-color=purple] {
     background: #000!important;
@@ -1771,7 +1768,7 @@ button {
 }
 
 .sh-sidebar-date .mat-form-field-empty.mat-form-field-placeholder {
-    top: 12px!important
+    top: 10px!important
 }
 
 .sh-sidebar-more-condense .mat-select {
@@ -2096,11 +2093,17 @@ button {
 .subscribe .mat-input-wrapper{
     padding-bottom: 0;
 }
-.CategorySlider.slick-initialized,
-body {
-    display: block!important
-}
+
 .min_height_550px{
     min-height: 550px;
 }
 .main-heading{text-align:center;margin:10px 0;color:#000}
+.CategorySlider.slick-initialized,
+body {
+    display: block!important;
+}
+body {
+    background-color: #fafafa;
+    overflow-x: hidden
+}
+.mat-option.mat-selected:not(.mat-option-multiple) {background-color: #c00 !important;color: #FFFFFF !important;}
