--- a/src/app/admin-penal/admin-penal.component.html
+++ b/src/app/admin-penal/admin-penal.component.html
@@ -24,7 +24,7 @@
                   </div>
                 </div>
                 <button class="fa btn sh fa-edit edit-del-btn" type="submit" value="Edit" type="submit" (click)="btnEditClick(rfp.id,rfp.rfpkey,rfp.rfp_number,rfp.title,rfp.descriptionTag,rfp.state,rfp.agency,rfp.date_entered,rfp.due_date,rfp.web_info,rfp.rfp_reference,rfp.category,rfp.sub_category,rfp.seoTitleUrl,rfp.bid_type,rfp.agency_type,rfp.city_or_county,rfp.city,rfp.open_rfp)"
-                  data-toggle="modal" data-target="#myModal2"><span style="font-size: 18px;">
+                ><span style="font-size: 18px;">
                     Edit </span>
                 </button>
                 <div class="card-content">
@@ -175,9 +175,9 @@
     </div>
   </div>
 </div>
-<div class="modal fade " id="myModal2" role="dialog">
+<!-- <div class="modal fade " id="myModal2" role="dialog">
   <div class="modal-dialog admin-popup">
-    <!-- Modal content-->
+    
     <div class="modal-content popupmodel">
       <div class="modal-body" >
           <div class="popup-close-button" data-dismiss="modal">X</div>
@@ -220,8 +220,15 @@
             <div class="col-md-6 col-sm-6">
               <div class="input-group">
                 <mat-form-field>
-                  <input matInput placeholder="State" name="states" value="{{states}}" #updatedstates />
-
+                
+                  <mat-select [(ngModel)]="states" name="states"  placeholder="Search By State" #updatedstates>
+                    <input class="inp" type="text" [(ngModel)]="statsearch" [ngModelOptions]="{standalone: true}"
+                        class="search-allstates" placeholder="Search By State" style="width: 100%; border-radius: 7px;">
+                    <i class="fa fa-search s-icon-all-states" area-hidden="true"></i>
+                    <mat-option value='all'>Select All</mat-option>
+                    <mat-option value='Federal'>Federal</mat-option>
+                    <mat-option *ngFor="let item of Statess | filter:statsearch" [value]="item.state">{{item.state}}</mat-option>
+                </mat-select>
                 </mat-form-field>
               </div>
             </div>
@@ -328,8 +335,7 @@
 
             <div class="col-md-6 col-sm-6">
               <div class="input-group margin-zero1">
-                  <!-- <input id="img" type='file' (change)="onChange($event)" name="web_info" > -->
-                  <!-- <input (change)="onChange($event)" #data type="file" accept="application/pdf" required> -->
+                 
                 <mat-form-field >
 
                   <input matInput placeholder="Web Information PDF" name="web_info" value="{{web_infoo}}" #updatedweb_info
@@ -375,4 +381,4 @@
 
     </div>
   </div>
-</div>
+</div> -->
