--- a/src/app/admin/changed-password/changed-password.component.html
+++ b/src/app/admin/changed-password/changed-password.component.html
@@ -1,7 +1,7 @@
 <app-loader></app-loader>
 <div class="row margin-0">
     <div class="col-lg-9 col-md-9 col-sm-10 col-xs-12 center-admin-form" id="display_advance">
-        <div class="col-md-7 col-md-offset-2">
+        <div class="col-md-7 col-sm-8 col-md-offset-2 tab-dp-center">
             <div class="card">
                 <form [formGroup]="register" class="sh-signup-form-fix edit-profile">
                     <div class="card-header card-header-icon" data-background-color="rose">
