--- a/src/app/layouts/lyout/admin-layout.component.html
+++ b/src/app/layouts/lyout/admin-layout.component.html
@@ -11,7 +11,7 @@
             <strong>Search Filters</strong>
           </div>
           <div class="sidebar custom sh-sidebar w3-animate-left " id="mySidebar">
-              <button class="btn btn-close" (click)="w3_close()">X</button>
+            <div class="col-sm-12 text-right padding-0 sidebar-close-btn"><button class="btn btn-close" (click)="w3_close()">X</button></div>  
             <app-user-sidebar></app-user-sidebar>
           </div>
       <div>
