--- a/src/app/rfps/single-rfp/single-rfp.component.html
+++ b/src/app/rfps/single-rfp/single-rfp.component.html
@@ -25,7 +25,7 @@
                     <!-- <div class="page-title">
                         <span>RFPs </span>
                     </div> -->
-                    <div class="products-area">
+                    <div class="products-area tab-mg-top-20px">
                         <div *ngFor="let rfp of record" class="card">
                             <div class="row">
                                 <div class="col-sm-12">
