--- a/src/app/admin/Preferences/profile.component.html
+++ b/src/app/admin/Preferences/profile.component.html
@@ -1,5 +1,5 @@
 <div class="row margin-0">
-    <div class="col-lg-10 col-md-10 col-sm-10 col-xs-12 center-admin-form" id="display_advance">
+    <div class="col-lg-10 col-md-10 col-sm-12 col-xs-12 center-admin-form" id="display_advance">
         <div class="card">
             <form [formGroup]="register" class="sh-signup-form-fix edit-profile sh-pref-selectlist">
                 <div class="card-header card-header-icon" data-background-color="rose">
@@ -170,7 +170,7 @@
                     </div>
                 </div>
                 <div class="form-footer">
-                    <div class="checkbox col-md-4 margin-0">
+                    <div class="checkbox col-md-4 col-sm-6 margin-0">
                         <label style="font-size: 18px">
                             <input type="checkbox" [(ngModel)]="personal.newsletter" value="{{personal.newsletter}}"
                                 name="newsletter" formControlName="newsletter"> Subscribe to Newsletter
@@ -178,7 +178,7 @@
                     </div>
                     <!-- <div *ngIf="!pkgsub">
                         </div> -->
-                    <div class="form-group text-center col-md-8">
+                    <div class="form-group text-center col-md-8 col-sm-6">
                         <button type="submit" class="btn s-pref-update-btn btn-lrg btn-rose btn-fill btn-wd" (click)="onRegister()">Update</button>
                     </div>
                 </div>
