--- a/src/app/watchlist/watchlist.component.html
+++ b/src/app/watchlist/watchlist.component.html
@@ -23,7 +23,7 @@
           <!-- <div class="page-title" style="margin:10px 0px">
               <span>Watchlist</span>
           </div> -->
-          <div   class="col-sm-6 page-title" style="margin:10px 0px" >
+          <div   class="col-sm-6 page-title"  >
                 <span>Watchlist</span>
                
               </div>
