--- a/src/assets/sass/material-dashboard/_misc.scss
+++ b/src/assets/sass/material-dashboard/_misc.scss
@@ -134,7 +134,7 @@ body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4 {
 }
 
 a{
-  color: $link-color;
+  color: #616161;
   &:hover,
   &:focus{
       color: darken($link-color, 5%);
