--- a/src/app/admin-penal/admin-penal.component.html
+++ b/src/app/admin-penal/admin-penal.component.html
@@ -7,7 +7,7 @@
         <div class="col-sm-12">
           <div class="page-title">
             <div class="col-sm-6" style="margin:10px 0px">
-              <span>Admin Penal</span>
+              <span>Admin Panel</span>
             </div>
             <div class="col-sm-6" style="margin:10px 0px">
               <span *ngIf="item">No of Letest RFPs: <b> {{item | number}}</b></span>
