--- a/src/app/admin/changed-password/changed-password.component.html
+++ b/src/app/admin/changed-password/changed-password.component.html
@@ -1,7 +1,7 @@
 <app-loader></app-loader>
 <div class="row margin-0">
     <div class="col-lg-9 col-md-9 col-sm-10 col-xs-12 center-admin-form" id="display_advance">
-        <div class="col-md-7 col-sm-8 col-md-offset-2 tab-dp-center">
+        <div class="col-md-6 col-sm-8 col-md-offset-2 tab-dp-center">
             <div class="card">
                 <form [formGroup]="register" class="sh-signup-form-fix edit-profile">
                     <div class="card-header card-header-icon" data-background-color="rose">
@@ -19,7 +19,7 @@
                                 </mat-error>
                             </mat-form-field>
                         </div>
-                        <div style="margin-top: -20px" class="form-group label-floating" [ngClass]="displayFieldCss(register, 'password')">
+                        <div  class="form-group mt-minus-20 label-floating" [ngClass]="displayFieldCss(register, 'password')">
                             <mat-form-field>
                                 <input matInput type="password" id="password" formControlName="password" [type]="hide ? 'password' : 'text'"
                                     placeholder="New Password" required>
@@ -36,7 +36,7 @@
                                 </mat-error>
                             </mat-form-field>
                         </div>
-                        <div style="margin-top:15px !important" class="form-group label-floating" [ngClass]="displayFieldCss(register, 'confirmPassword')">
+                        <div  class="mt-15 form-group label-floating" [ngClass]="displayFieldCss(register, 'confirmPassword')">
                             <mat-form-field>
                                 <input matInput type="password" id="confirmPassword" formControlName="confirmPassword"
                                     [type]="hide ? 'password' : 'text'" placeholder="Confirm Password" required>
@@ -50,7 +50,7 @@
                         </div>
                         <div class="form-footer text-right">
                             <div class="form-group text-center">
-                                <button style="width: 50%; font-size: 20px!important;" class="btn btn-rose btn-fill btn-wd"
+                                <button class="btn btn-rose btn-fill btn-wd ch-pas-update"
                                     (click)="changedPassword()" title="Update">Update</button>
                             </div>
                         </div>
