--- a/src/app/rfp-as-service/rfp-as-service.component.html
+++ b/src/app/rfp-as-service/rfp-as-service.component.html
@@ -69,20 +69,8 @@
     <div class="col-md-4" style="color: #000;">
       <p class="lead">If you need help before, during or after your purchase, this is the place to be. Please use below contact details for all your pre-sale questions, contact questions.</p>
       <hr />
-      <a href="mailto:info@rfpgurus.com" class="btn btn-rose" style="width: 100%;"><span class="__cf_email__" >email us</span></a>
-      <!-- <ul class="contact-details">
-          
-            <label>Website</label>
-            <li><i class="fa fa-link"></i> <a >www.rfpgurus.com</a></li>
-            <label>Email</label>
-            <li><i class="fa fa-envelope-o"></i> <a href="mailto:rfpgurus@gmail.com"><span class="__cf_email__" >rfpgurus@gmail.com
-              </span></a></li>
-            <label>Phone</label>
-            <li><i class="fa fa-phone"></i>+1 (888) 764-0100</li>
-            <li><i class="fa fa-fax"></i> +1 (469) 250-6600</li>
-            <label>Address</label>
-            <li><i class="fa fa-home"></i>5050 Quorum Drive  Suite 700  Dallas TX 75254.</li>
-          </ul> -->
+      <button href="mailto:info@rfpgurus.com" class="btn btn-rose email-us" style="width: 100%;">email us</button>
+      
     
       </div>
   </div>
