--- a/src/app/registered/registered.component.html
+++ b/src/app/registered/registered.component.html
@@ -63,13 +63,13 @@
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                   <div class="form-group label-floating" [ngClass]="displayFieldCss(register, 'zipcode')">
-                    <mat-form-field>
+                    <mat-form-field class="zipCodee">
                       <input matInput type="text" maxlength="5" id="zipcode" (ngModelChange)="zipcodeCheck(zipcode1.value)" #zipcode1 formControlName="zipcode"
                              placeholder="Zip Code" maxlength="5" required />
                       <mat-error *ngIf="register.controls.zipcode.value == ''">
                         <strong>Zipcode cannot be empty</strong>
                       </mat-error>
-                      <mat-error *ngIf="register.controls.zipcode.hasError('pattern')">
+                      <mat-error class="border-right" *ngIf="register.controls.zipcode.hasError('pattern')">
                         Only Numbers
                       </mat-error>
                       <mat-error *ngIf="register.controls.zipcode.errors?.minlength">
