--- a/src/app/edit-rfp/edit-rfp.component.html
+++ b/src/app/edit-rfp/edit-rfp.component.html
@@ -20,7 +20,7 @@
                 </mat-form-field>
               </div>
             </div>
-            <div class="col-md-6 col-sm-6">
+            <div class="col-md-6 col-sm-6" hidden=true>
               <div class="input-group" >
 
                 <mat-form-field>
@@ -184,7 +184,7 @@
                 </mat-form-field>
               </div>
             </div>
-            <div class="col-md-6 col-sm-6">
+            <div class="col-md-6 col-sm-6" hidden=true>
               <div class="input-group margin-zero1" >
 
                 <mat-form-field>
