--- a/src/app/rfps/single-rfp/single-rfp.component.html
+++ b/src/app/rfps/single-rfp/single-rfp.component.html
@@ -32,7 +32,10 @@
                                     <div class="card-header card-header-text" data-background-color="red">
                                         <h4 class="card-title">{{rfp.rfpkey}}</h4>
                                     </div>
-                                </div>
+                                </div><button *ngIf="adminlogin" class="fa btn sh fa-edit edit-del-btn" type="submit" value="Edit" type="submit" (click)="btnEditClick(rfp.id,rfp.rfpkey,rfp.rfp_number,rfp.title,rfp.descriptionTag,rfp.state,rfp.agency,rfp.date_entered,rfp.due_date,rfp.web_info,rfp.rfp_reference,rfp.category,rfp.sub_category,rfp.seoTitleUrl,rfp.bid_type,rfp.agency_type,rfp.city_or_county,rfp.city,rfp.open_rfp)"
+                                ><span style="font-size: 18px;">
+                                    Edit </span>
+                                </button>
                                 <div class="card-content">
                                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 plan-detail">
                                         <h3>{{rfp.title}}</h3>
