--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -3645,10 +3645,16 @@ button {
 
 .admin-popup {
     min-width: 100%;
-    height: 400px;
-    overflow-x: scroll;
+    margin: 0;
 }
-
+.popupmodel .input-group{
+    display: block;
+}
+.popupmodel .input-group .mat-select {
+    background: #fff;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
 .admin-popup .modal-body {
     font-size: 18px;
     background: #fff;
@@ -3656,13 +3662,12 @@ button {
     margin: 15px;
     position: relative
 }
-
 .admin-popup .popup-close-button {
     position: absolute;
-    top: 10px;
-    right: 0
+    top: 2px;
+    right: 1px;
+    z-index: 9;
 }
-
 .pricing-card-type {
     width: 100%;
     height: 38px;
