--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -3646,6 +3646,7 @@ button {
 .admin-popup {
     min-width: 100%;
     margin: 0;
+    width: 100%;
 }
 .popupmodel .input-group{
     display: block;
