--- a/src/app/edit-rfp/edit-rfp.component.html
+++ b/src/app/edit-rfp/edit-rfp.component.html
@@ -1,17 +1,14 @@
 <div class="card">
-  
   <div class="modal-dialog admin-popup">
-     
+    
     <div class="modal-content popupmodel">
       <div class="modal-body" >
-         
+          <!-- <div class="popup-close-button" data-dismiss="modal">X</div> -->
         <div class="row">
           <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9 " style="margin-bottom:10px;border-bottom: 1px #4f4f4f solid;">
             <p class=" modal-v2__main-heading"> {{data.title}}</p>
-
           </div>
-
-          <form class="sh-signup-form-fix">
+          <form class="sh-signup-form-fix edit-rfp-form">
 
             <div class="col-md-6 col-sm-6">
               <div class="input-group">
