--- a/src/app/layouts/admin/superadmin.component.html
+++ b/src/app/layouts/admin/superadmin.component.html
@@ -3,26 +3,30 @@
   <div class="container-fluid">
     <div class="row">
       <div class="navbar-minimize sidebarToggle">
-        <button class="btn btn-round btn-white btn-fill btn-just-icon" id="minimizeSidebar">
+        <button (click)="w3_open()" class="btn btn-round btn-white btn-fill btn-just-icon" id="minimizeSidebar">
           <i class="material-icons visible-on-sidebar-regular">more_vert</i>
           <i class="material-icons visible-on-sidebar-mini">view_list</i>
           <div class="ripple-container"></div>
         </button>
         <strong>Sidebar</strong>
       </div>
-      <div class="sidebar custom sh-sidebar">
+      <div class="sidebar custom " id="mySidebar">
+          
         <!-- <app-supersiderbar></app-supersiderbar> -->
-        <div class="sidebar-holder" id="side">
+        <div class="sidebar-holder w3-animate-left" id="side">
           <div class="sidebar-admin">
             <div class="user-sidebar">
-              <div class="admin-img">
-                <img src="../../../assets/img/faces/marc.jpg" class="img-responsive" alt="img">
+                <div class="col-sm-12 text-right padding-0 sidebar-close-btn"><button class="btn btn-close" (click)="w3_close()">X</button></div> 
+              <div class=" col-sm-12">
+                  <div class="admin-img tab-text-center">
+                    <img src="../../../assets/img/faces/marc.jpg" class="img-responsive" alt="img">
+                    </div>
               </div>
-              <ul>
+              <ul class="col-sm-12">
                 <li><a routerLink="/admin-panel" routerLinkActive="active-route">
                     <i class="fa fa-dashboard"></i>Dashboard</a>
                 </li>
-                <li><a routerLink="/" routerLinkActive="active-route">
+                <li><a routerLink="/">
                     <i class="fa fa-home"></i>Home</a>
                 </li>
                 <li>
@@ -37,7 +41,7 @@
         </div>
 
       </div>
-      <div>
+      <div class="sup-adm-dashboard">
         <router-outlet></router-outlet>
       </div>
     </div>
