--- a/src/assets/css/responsive.css
+++ b/src/assets/css/responsive.css
@@ -129,6 +129,9 @@
     }
 }
 @media (max-width:1080px){
+    .sh-products-area .table-normal td {
+        font-size: 15px;
+    }
     .navbar-nav>li>a {
         font-size: 13px!important;
         padding: 18px 0 18px 1px;
@@ -143,7 +146,12 @@
     }
 }
 @media (max-width:991px) {
-
+    .edit-del-btn.sh {
+        top: -16px;
+        border-radius: 0 !important;
+        z-index: 9;
+        right: 20px;
+    }
     .tab-dp-center{
         margin: 0 auto;
         float: none;
@@ -293,6 +301,9 @@
       .sh-sidebar-user  .mat-select-panel {
         max-width: 160px !important;
     }
+    .sup-adm-dashboard{
+        padding-top: 40px;
+    }
 }
 
 @media (max-width:767px) {
@@ -437,6 +448,12 @@
 }
 
 @media (max-width:640px) {
+    .must-login {
+        font-size: 26px;
+    }
+    .login-or-signup .modal-dialog {
+        width: 90% !important;
+    }
     .contact-address h2{
         font-size: 22px
     }
@@ -480,7 +497,7 @@
     }
     .custom-model .modal-body {
         padding: 5px 10px;
-        font-size: 18px
+        font-size: 14px
     }
     .custom-popup-img img {
         width: 50%!important
@@ -849,6 +866,9 @@
     #mySidebar{
         display: block !important;
     }
+    .sidebar-close-btn{
+        display: none;
+    }
 }
 @media (min-width:768px) and (max-width:991px) {
     .s-l-google {
@@ -1060,12 +1080,6 @@
         margin-bottom: 0px!important
     }
 }
-
-
-@media (min-width:767px) {
-
-}
-
 @media (min-width:1023px) {
     .rfp-component  .find-bids-pageination,
     .rfp-component  .mat-header-row {
