--- a/src/app/edit-rfp/edit-rfp.component.html
+++ b/src/app/edit-rfp/edit-rfp.component.html
@@ -45,12 +45,11 @@
               <div class="input-group">
                 <mat-form-field>
                 
-                  <mat-select [(ngModel)]="data.states" name="states"  placeholder="Search By State" #updatedstates>
+                  <mat-select [(ngModel)]="data.states" name="states"  placeholder="State" #updatedstates>
                     <input class="inp" type="text" [(ngModel)]="statsearch" [ngModelOptions]="{standalone: true}"
                         class="search-allstates" placeholder="Search By State" style="width: 100%; border-radius: 7px;">
                     <i class="fa fa-search s-icon-all-states" area-hidden="true"></i>
                     <mat-option value='all'>Select All</mat-option>
-                    <mat-option value='Federal'>Federal</mat-option>
                     <mat-option *ngFor="let item of Statess | filter:statsearch" [value]="item.state">{{item.state}}</mat-option>
                 </mat-select>
                 </mat-form-field>
@@ -60,8 +59,8 @@
               <div class="input-group">
 
                 <mat-form-field>
-                  <!-- <input matInput placeholder="Agency" name="agency" value="{{data.agency}}" #updatedagency /> -->
-                  <mat-select [(ngModel)]="data.agency" name="agency" placeholder="Search By Agency" #updatedagency>
+                  <input matInput placeholder="Agency" name="agency" value="{{data.agency}}" #updatedagency />
+                  <mat-select [(ngModel)]="data.agency" name="agency" placeholder="Agency" #updatedagency>
                     <input class="inp" type="text" [(ngModel)]="agensearch" [ngModelOptions]="{standalone: true}"
                         class="search-allstates" placeholder="Search By Agency" style="width: 100%; border-radius: 7px">
                     <i class="fa fa-search s-icon-all-states" area-hidden="true"></i>
@@ -75,8 +74,8 @@
               <div class="input-group">
 
                 <mat-form-field>
-                  <!-- <input matInput placeholder="Category" name="category" value="{{data.category}}" #updatedcategory /> -->
-                  <mat-select [(ngModel)]=data.category name="category" placeholder="Search By Category" #updatedcategory >
+                  <input matInput placeholder="Category" name="category" value="{{data.category}}" #updatedcategory />
+                  <mat-select  [(ngModel)]=data.category  name="category" placeholder="Category" #updatedcategory  multiple>
                     <input class="inp" type="text" [(ngModel)]="catsearch" [ngModelOptions]="{standalone: true}"
                         placeholder="Search By Category" class="search-allstates" style="width: 100%; border-radius: 7px">
                     <i class="fa fa-search s-icon-all-states" area-hidden="true"></i>
